src/app.css
@import '@fontsource/roboto';

:root {
	--font-heading: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	--font-body: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;

--color-darker: #121212;
  --color-off-white: #fffff0;
  --color-light: rgba(255, 255, 255, 0.7);
  --color-light-dim: rgba(255, 255, 255, 0.4);
  --color-accent: rgb(144, 202, 249);
  --color-other-dunno-color: #90caf9;
  --color-accent-dim: rgba(144, 202, 249, 0.4);

  scroll-behavior: smooth;

  --color-dark: #333;
  --body-background-color: var(--color-off-white);
  --card-background-color: #abc;
  --card-text-color: var(--color-dark);
  --body-text-color: var(--color-dark);
  --border-color: #666;
  --link-color: #14f;
  --link-hover-color: #111;
  --toggle-track-color-off: var(--color-dark);
  --toggle-track-color-on: var(--toggle-track-color-off);
  --toggle-knob-color-off: var(--color-off-white);
  --toggle-knob-color-on: var(--toggle-knob-color-off);
  --color-text-strong: black;
  --border-color: rgba(0, 0, 0, 0.1);
  --color-inactive: rgba(0, 0, 0, 0.3);
}

/* This used to use @media (prefers-color-scheme: dark) */
body.dark-mode {
  --color-dark: #272727;
  --body-background-color: var(--color-darker);
  --card-background-color: var(--color-dark);
  --body-text-color: var(--color-light);
  --link-color: var(--color-accent);
  --link-hover-color: var(--color-accent-dim);
  --toggle-track-color-off: var(--color-accent-dim);
  --toggle-track-color-on: var(--toggle-track-color-off);
  --toggle-knob-color-off: var(--color-accent);
  --toggle-knob-color-on: var(--toggle-knob-color-off);
  --color-text-strong: white;
  --border-color: rgba(255, 255, 255, 0.1);
  --color-inactive: rgba(255, 255, 255, 0.3);
}

* {
  box-sizing: border-box;
}

.visually-hidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: auto;
	margin: 0;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
	white-space: nowrap;
}

body {
	min-height: 100vh;
	margin-inline-start: 0;
	margin-inline-end: 0;
	margin-block-start: 0;
	margin-block-end: 0;
	background-attachment: fixed;
	background-size: 100vw 100vh;
  background-color: var(--body-background-color);
  color: var(--body-text-color);
	font-family: var(--font-body);
  line-height: 1.5;
}

body:not([data-has-js]) [data-requires-js] {
  display: none;
}

main {
  margin-inline-start: auto;
  margin-inline-end: auto;
  margin-block-start: 2rem;
  margin-block-end: 0;
  padding-inline-start: 0;
  padding-inline-end: 0;
  padding-block-start: 0;
  padding-block-end: 0;
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
}

main {
  margin-inline-start: auto;
  margin-inline-end: auto;
  max-width: 70rem;
}

section {
  padding-block-start: 2rem;
  padding-block-end: 4rem;
  text-align: center;
  max-width: 36rem;
  margin-inline-start: auto;
  margin-inline-end: auto;
}

input,
button {
  font-size: inherit;
  font-family: inherit;
}

input[type=text] {
  color: inherit;
}

a {
  color: var(--link-color);
  text-decoration-color: var(--color-accent-dim);

  &:hover {
    text-decoration-color: inherit;
  }
}

